// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Bids|BidDialog closed 1`] = `""`;

exports[`Storyshots Bids|BidDialog default 1`] = `
<Portal
  containerInfo={
    <body
      style="overflow: hidden; padding-right: 0px;"
    >
      <div
        aria-hidden="true"
        class="app"
        id="app"
      />
      <div
        aria-labelledby="form-dialog-title"
        class="MuiModal-root MuiDialog-root"
        role="dialog"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          class="MuiDialog-container MuiDialog-scrollPaper"
          role="document"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation24 MuiPaper-rounded MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm"
          >
            <div
              class="MuiDialogTitle-root"
              id="form-dialog-title"
            >
              <h2
                class="MuiTypography-root MuiTypography-title"
              >
                Submit Bid
              </h2>
            </div>
            <div
              class="MuiDialogContent-root BidDialog-root"
            >
              <div
                class="BidDialog-inputRow"
              >
                <h1
                  class="MuiTypography-root MuiTypography-headline BidDialog-inputLabel"
                >
                  Lake Valentine sit
                </h1>
                <div
                  class="MuiFormControl-root BidDialog-currencyInput"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                      id="bid-amount"
                      type="text"
                      value="$120.78"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat CurrencyInputField-stepButton"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            role="presentation"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                            />
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat CurrencyInputField-stepButton"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            role="presentation"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                            />
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="MuiTypography-root MuiDialogContentText-root MuiTypography-subheading MuiTypography-colorTextSecondary"
              />
            </div>
            <div
              class="MuiDialogActions-root"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat MuiDialogActions-action"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Cancel
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-flat MuiButton-flatPrimary MuiDialogActions-action"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Submit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </body>
  }
>
  <div
    aria-labelledby="form-dialog-title"
    className="MuiModal-root MuiDialog-root"
    onKeyDown={[Function]}
    role="dialog"
  >
    <div
      aria-hidden="true"
      className="MuiBackdrop-root"
      onClick={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    />
    <div
      className="MuiDialog-container MuiDialog-scrollPaper"
      onClick={[Function]}
      onMouseDown={[Function]}
      role="document"
      style={
        Object {
          "opacity": 1,
        }
      }
      tabIndex="-1"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation24 MuiPaper-rounded MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm"
      >
        <div
          className="MuiDialogTitle-root"
          id="form-dialog-title"
        >
          <h2
            className="MuiTypography-root MuiTypography-title"
          >
            Submit Bid
          </h2>
        </div>
        <div
          className="MuiDialogContent-root BidDialog-root"
        >
          <div
            className="BidDialog-inputRow"
          >
            <h1
              className="MuiTypography-root MuiTypography-headline BidDialog-inputLabel"
            >
              Lake Valentine sit
            </h1>
            <div
              className="MuiFormControl-root BidDialog-currencyInput"
            >
              <div
                className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                  disabled={false}
                  id="bid-amount"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseUp={[Function]}
                  required={false}
                  type="text"
                  value="$120.78"
                />
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                >
                  <button
                    className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat CurrencyInputField-stepButton"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                  >
                    <span
                      className="MuiButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat CurrencyInputField-stepButton"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                  >
                    <span
                      className="MuiButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <p
            className="MuiTypography-root MuiDialogContentText-root MuiTypography-subheading MuiTypography-colorTextSecondary"
          />
        </div>
        <div
          className="MuiDialogActions-root"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat MuiDialogActions-action"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Cancel
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-flat MuiButton-flatPrimary MuiDialogActions-action"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Submit
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</Portal>
`;

exports[`Storyshots Bids|BidDialog loading 1`] = `
<Portal
  containerInfo={
    <body
      style="padding-right: 0px; overflow: hidden;"
    >
      <div
        aria-hidden="true"
        class="app"
        id="app"
      />
      <div
        aria-labelledby="form-dialog-title"
        class="MuiModal-root MuiDialog-root"
        role="dialog"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          class="MuiDialog-container MuiDialog-scrollPaper"
          role="document"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation24 MuiPaper-rounded MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm"
          >
            <div
              class="MuiDialogTitle-root"
              id="form-dialog-title"
            >
              <h2
                class="MuiTypography-root MuiTypography-title"
              >
                Submit Bid
              </h2>
            </div>
            <div
              class="MuiDialogContent-root BidDialog-root"
            >
              <div
                class="BidDialog-inputRow"
              >
                <h1
                  class="MuiTypography-root MuiTypography-headline BidDialog-inputLabel"
                >
                  Lake Valentine sit
                </h1>
                <div
                  class="MuiFormControl-root BidDialog-currencyInput"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                  >
                    <input
                      aria-invalid="false"
                      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                      id="bid-amount"
                      type="text"
                      value="$120.78"
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat CurrencyInputField-stepButton"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            role="presentation"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                            />
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat CurrencyInputField-stepButton"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            role="presentation"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                            />
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="MuiTypography-root MuiDialogContentText-root MuiTypography-subheading MuiTypography-colorTextSecondary"
              />
            </div>
            <div
              class="MuiDialogActions-root"
            >
              <button
                class="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root MuiButton-text MuiButton-flat MuiButton-disabled MuiDialogActions-action"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Cancel
                </span>
              </button>
              <button
                class="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-flat MuiButton-flatPrimary MuiButton-disabled MuiDialogActions-action"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  Submit
                </span>
              </button>
              <div
                class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate BidDialog-buttonProgress MuiDialogActions-action"
                role="progressbar"
                style="width: 32px; height: 32px;"
              >
                <svg
                  class="MuiCircularProgress-svg"
                  viewBox="22 22 44 44"
                >
                  <circle
                    class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                    cx="44"
                    cy="44"
                    fill="none"
                    r="20.2"
                    stroke-width="3.6"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </body>
  }
>
  <div
    aria-labelledby="form-dialog-title"
    className="MuiModal-root MuiDialog-root"
    onKeyDown={[Function]}
    role="dialog"
  >
    <div
      aria-hidden="true"
      className="MuiBackdrop-root"
      onClick={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    />
    <div
      className="MuiDialog-container MuiDialog-scrollPaper"
      onClick={[Function]}
      onMouseDown={[Function]}
      role="document"
      style={
        Object {
          "opacity": 1,
        }
      }
      tabIndex="-1"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation24 MuiPaper-rounded MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm"
      >
        <div
          className="MuiDialogTitle-root"
          id="form-dialog-title"
        >
          <h2
            className="MuiTypography-root MuiTypography-title"
          >
            Submit Bid
          </h2>
        </div>
        <div
          className="MuiDialogContent-root BidDialog-root"
        >
          <div
            className="BidDialog-inputRow"
          >
            <h1
              className="MuiTypography-root MuiTypography-headline BidDialog-inputLabel"
            >
              Lake Valentine sit
            </h1>
            <div
              className="MuiFormControl-root BidDialog-currencyInput"
            >
              <div
                className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  className="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                  disabled={false}
                  id="bid-amount"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseUp={[Function]}
                  required={false}
                  type="text"
                  value="$120.78"
                />
                <div
                  className="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                >
                  <button
                    className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat CurrencyInputField-stepButton"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                  >
                    <span
                      className="MuiButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-flat CurrencyInputField-stepButton"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex="0"
                    type="button"
                  >
                    <span
                      className="MuiButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        className="MuiSvgIcon-root"
                        focusable="false"
                        role="presentation"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <p
            className="MuiTypography-root MuiDialogContentText-root MuiTypography-subheading MuiTypography-colorTextSecondary"
          />
        </div>
        <div
          className="MuiDialogActions-root"
        >
          <button
            className="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root MuiButton-text MuiButton-flat MuiButton-disabled MuiDialogActions-action"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Cancel
            </span>
          </button>
          <button
            className="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-flat MuiButton-flatPrimary MuiButton-disabled MuiDialogActions-action"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              Submit
            </span>
          </button>
          <div
            className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate BidDialog-buttonProgress MuiDialogActions-action"
            role="progressbar"
            style={
              Object {
                "height": 32,
                "width": 32,
              }
            }
          >
            <svg
              className="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx={44}
                cy={44}
                fill="none"
                r={20.2}
                strokeWidth={3.6}
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</Portal>
`;
